--- a/wp-content/themes/mesc/css/style.css
+++ b/wp-content/themes/mesc/css/style.css
@@ -998,6 +998,23 @@ footer {
       transition: all ease-in-out 0.2s; }
       footer .social .tw:hover {
         opacity: .5; }
+    footer .social .lin {
+      position: relative;
+      display: inline-block;
+      padding: 0 30px;
+      width: 20px;
+      height: 20px;
+      background-size: 22px;
+      background-image: url("../img/linkedin.svg");
+      background-position: right;
+      background-repeat: no-repeat;
+      -webkit-transition: all ease-in-out 0.2s;
+      -moz-transition: all ease-in-out 0.2s;
+      -ms-transition: all ease-in-out 0.2s;
+      -o-transition: all ease-in-out 0.2s;
+      transition: all ease-in-out 0.2s; }
+      footer .social .lin:hover {
+        opacity: .5; }
   footer:before {
     position: absolute;
     background-color: #c13b1a;
