--- a/wp-content/themes/mesc/css/style.scss
+++ b/wp-content/themes/mesc/css/style.scss
@@ -761,6 +761,21 @@ footer{
         opacity:.5;
       }
     }
+    .lin{
+      @include relative(inline-block);
+      padding:0 30px;
+      width:20px;
+      height: 20px;
+      background-size: 22px;
+      background-image: url('../img/linkedin.svg');
+      background-position:right;
+      background-repeat: no-repeat;
+      @include transition(all ease-in-out .2s);
+      &:hover{
+        opacity:.5;
+      }
+    }
+
 
 
   }
